<resources>
    <string name="app_name">Dog Breeds App</string>
    <string name="favorite_title_screen">"My Favorite Breeds"</string>
    <string name="error_default_message">"Ops! An error has occurred!"</string>
    <string name="filter_favorite_breeds">"Filter your favorite breeds</string>




    <string name="breed_list_screen">BreedListScreen</string>
    <string name="arrow_back_content_desc">arrow back</string>
    <string name="favorite_icon_content_desc">favorite icon</string>

</resources>