...
    val onBreedPictureClicked: (String) -> Unit = { url ->
        viewModel.onBreedPictureClicked(breedName = breed, breedPictureUrl = url)
    }

    val onRetryClicked: () -> Unit = { viewModel.fetchBreedPictures() }

    Box(modifier = Modifier.fillMaxSize().semantics { contentDescription = "BreedPictureScreen" }) {
        when (uiState.breedPictures) {
            UiState.Empty -> CustomEmptyComponent()
            is UiState.Error -> CustomErrorComponent(
                errorTitle = uiState.breedPictures.message ?: "Ops, error occurred!!",
                onRetryClicked = onRetryClicked,
            )
...
