...
            horizontalArrangement = if (onIconClicked != null) Arrangement.SpaceBetween else Arrangement.Start,
            modifier = Modifier
                .fillMaxSize()
                .padding(horizontal = 16.dp), // Due to Material Design 3: https://m3.material.io/components/top-app-bar/specs#e3fd3eba-0444-437c-9a82-071ef03d85b1
        ) {
            onNavigateUp?.let {
                CustomTouchableScale(onClick = it) {
                    Icon(
                        imageVector = Icons.Rounded.ArrowBack,
                        contentDescription = stringResource(id = R.string.arrow_back_content_desc),
                        modifier = Modifier
                            .requiredWidth(24.dp)
                            .requiredHeight(48.dp),
...
